--- a/index.html
+++ b/index.html
@@ -432,9 +432,9 @@
     <div class="backdrop is-hidden" data-modal>
         
         <div class="modal"> 
-            <button class="button-close" type="button" data-modal-close width="11" height="11">
+            <button class="button-close" type="button" data-modal-close >
 
-                <svg class="icon" width="17" height="17">
+                <svg class="icon" width="30" height="30">
                     <use href="./images/sprite.svg#icon-close"></use>
                 </svg>
             </button>
